--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@testomatio/reporter": "^2.6.2",
     "@types/node": "^25.0.3"
   }
 }
